[cinder] Add reainess probe for backup StatefulSet
Related-Prod: PRODX-46968
Change-Id: I566154213d79252117a12a11e4b25151ba02d616

--- a/charts/openstack/cinder/templates/statefulset-backup.yaml
+++ b/charts/openstack/cinder/templates/statefulset-backup.yaml
@@ -106,6 +106,7 @@ spec:
           command:
             - /tmp/cinder-backup.sh
 {{ dict "envAll" $envAll "component" "backup" "container" "default" "type" "liveness" "probeTemplate" (include "backupProbeTemplate" "liveness" | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
+{{ dict "envAll" $envAll "component" "backup" "container" "default" "type" "readiness" "probeTemplate" (include "backupProbeTemplate" "readiness" | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
           terminationMessagePath: /var/log/termination-log
           volumeMounts:
 {{ dict "envAll" $envAll "objectType" "mountpoint" "secretPrefix" "cinder" | include "helm-toolkit.snippets.kubernetes_ssl_objects" | indent 12 }}
