[cloudprober] Add reainess probe for openstack-discovery container
Related-Prod: PRODX-46968
Change-Id: Ia5f4f03b87a5fbcb03d7f22182d681040dc50106

--- a/charts/infra/cloudprober/templates/deployment.yaml
+++ b/charts/infra/cloudprober/templates/deployment.yaml
@@ -100,6 +100,7 @@ spec:
             - /tmp/openstack_discovery.py
             - --daemon
 {{ dict "envAll" $envAll "component" "cloudprober" "container" "openstack_discovery" "type" "liveness" "probeTemplate" (include "discoveryProbeTemplate" $envAll | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
+{{ dict "envAll" $envAll "component" "cloudprober" "container" "openstack_discovery" "type" "readiness" "probeTemplate" (include "discoveryProbeTemplate" $envAll | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
           volumeMounts:
             - mountPath: /tmp
               name: pod-tmp
