[ingress] Add reainess probe for ingress-error-pages Deployment
Related-Prod: PRODX-46968
Change-Id: I28c88efed69fae7a6829fe112a4cc95bea44c5d4

--- a/charts/infra/ingress/values.yaml
+++ b/charts/infra/ingress/values.yaml
@@ -43,6 +43,20 @@ images:
 
 pod:
   probes:
+    error_pages:
+      error_pages:
+        readiness:
+          enabled: true
+          params:
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            timeoutSeconds: 5
+        liveness:
+          enabled: true
+          params:
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
     server:
       ingress:
         readiness:
