--- a/charts/infra/ingress/templates/deployment-error.yaml
+++ b/charts/infra/ingress/templates/deployment-error.yaml
@@ -12,6 +12,13 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */}}
 
+{{- define "probeTemplate" }}
+httpGet:
+  path: /healthz
+  port: 8080
+  scheme: HTTP
+{{- end }}
+
 {{- if .Values.manifests.deployment_error }}
 {{- $envAll := . }}
 
@@ -57,13 +64,8 @@ spec:
 {{ tuple $envAll "error_pages" | include "helm-toolkit.snippets.image" | indent 10 }}
 {{ tuple $envAll $envAll.Values.pod.resources.error_pages | include "helm-toolkit.snippets.kubernetes_resources" | indent 10 }}
 {{ dict "envAll" $envAll "application" "error_pages" "container" "ingress_error_pages" | include "helm-toolkit.snippets.kubernetes_container_security_context" | indent 10 }}
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 8080
-              scheme: HTTP
-            initialDelaySeconds: 30
-            timeoutSeconds: 5
+{{ dict "envAll" $envAll "component" "error_pages" "container" "error_pages" "type" "readiness" "probeTemplate" (include "probeTemplate" $envAll | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
+{{ dict "envAll" $envAll "component" "error_pages" "container" "error_pages" "type" "liveness" "probeTemplate" (include "probeTemplate" $envAll | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
           ports:
             - containerPort: 8080
           volumeMounts:
