--- a/charts/openstack/octavia/values.yaml
+++ b/charts/openstack/octavia/values.yaml
@@ -1068,6 +1068,24 @@ pod:
             timeoutSeconds: 30
             successThreshold: 1
             failureThreshold: 5
+    octavia_housekeeping:
+      octavia_housekeeping:
+        readiness:
+          enabled: true
+          params:
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 30
+            successThreshold: 1
+            failureThreshold: 5
+        liveness:
+          enabled: true
+          params:
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 30
+            successThreshold: 1
+            failureThreshold: 5
   security_context:
     bootstrap:
       pod:
