[aodh] Add health checks for components
Related-Prod: PRODX-46968
Change-Id: I7bc94c0afb43ecc251815a9dc9489f21bd8383e8

--- a/charts/openstack/aodh/templates/configmap-bin.yaml
+++ b/charts/openstack/aodh/templates/configmap-bin.yaml
@@ -56,4 +56,6 @@ data:
 {{- include "helm-toolkit.scripts.keystone_user" . | indent 4 }}
   rabbit-init.sh: |
 {{- include "helm-toolkit.scripts.rabbit_init" . | indent 4 }}
+  health-probe.py: |
+{{- include "helm-toolkit.scripts.generic_health_probe" . | indent 4 }}
 {{- end }}
