--- a/charts/openstack/aodh/templates/deployment-evaluator.yaml
+++ b/charts/openstack/aodh/templates/deployment-evaluator.yaml
@@ -14,6 +14,23 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */}}
 
+{{- define "evaluatorProbeTemplate" }}
+{{- $probeType := . }}
+exec:
+  command:
+    - python
+    - /tmp/health-probe.py
+    - --config-file
+    - /etc/aodh/aodh.conf
+    - --process-name
+    - aodh-evaluator
+    - --probe-type
+    - {{ $probeType }}
+    - --check
+    - database_sockets
+{{- end }}
+
+
 {{- if .Values.manifests.deployment_evaluator }}
 {{- $envAll := . }}
 
@@ -60,6 +77,8 @@ spec:
 {{ tuple $envAll "aodh_evaluator" | include "helm-toolkit.snippets.image" | indent 10 }}
 {{ tuple $envAll $envAll.Values.pod.resources.evaluator | include "helm-toolkit.snippets.kubernetes_resources" | indent 10 }}
 {{ dict "envAll" $envAll "application" "aodh" "container" "aodh_evaluator" | include "helm-toolkit.snippets.kubernetes_container_security_context" | indent 10 }}
+{{ dict "envAll" $envAll "component" "evaluator" "container" "evaluator" "type" "liveness" "probeTemplate" (include "evaluatorProbeTemplate" "liveness" | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
+{{ dict "envAll" $envAll "component" "evaluator" "container" "evaluator" "type" "readiness" "probeTemplate" (include "evaluatorProbeTemplate" "readiness" | fromYaml) | include "helm-toolkit.snippets.kubernetes_probe" | indent 10 }}
           command:
             - /tmp/aodh-evaluator.sh
             - start
@@ -88,6 +107,10 @@ spec:
             - name: aodh-bin
               mountPath: /tmp/aodh-evaluator.sh
               subPath: aodh-evaluator.sh
+              readOnly: true
+            - name: aodh-bin
+              mountPath: /tmp/health-probe.py
+              subPath: health-probe.py
               readOnly: true
 {{ if $mounts_aodh_evaluator.volumeMounts }}{{ toYaml $mounts_aodh_evaluator.volumeMounts | indent 12 }}{{ end }}
       volumes:
