--- a/charts/openstack/aodh/values.yaml
+++ b/charts/openstack/aodh/values.yaml
@@ -250,6 +250,54 @@ pod:
             initialDelaySeconds: 0
             periodSeconds: 10
             timeoutSeconds: 5
+        liveness:
+          enabled: true
+          params:
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 10
+    evaluator:
+      evaluator:
+        readiness:
+          enabled: true
+          params:
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 5
+        liveness:
+          enabled: true
+          params:
+            initialDelaySeconds: 60
+            periodSeconds: 60
+            timeoutSeconds: 10
+    listener:
+      listener:
+        readiness:
+          enabled: true
+          params:
+            initialDelaySeconds: 0
+            periodSeconds: 30
+            timeoutSeconds: 5
+        liveness:
+          enabled: true
+          params:
+            initialDelaySeconds: 10
+            periodSeconds: 60
+            timeoutSeconds: 10
+    notifier:
+      notifier:
+        readiness:
+          enabled: true
+          params:
+            initialDelaySeconds: 0
+            periodSeconds: 30
+            timeoutSeconds: 5
+        liveness:
+          enabled: true
+          params:
+            initialDelaySeconds: 10
+            periodSeconds: 60
+            timeoutSeconds: 10
   replicas:
     api: 1
     evaluator: 1
