--- a/charts/openstack/ceilometer/templates/configmap-bin.yaml
+++ b/charts/openstack/ceilometer/templates/configmap-bin.yaml
@@ -48,7 +48,7 @@ data:
   ks-user.py: |
 {{- include "helm-toolkit.scripts.keystone_user" . | indent 4 }}
   health-probe.py: |
-{{- tuple "bin/_health-probe.py.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
+{{- include "helm-toolkit.scripts.generic_health_probe" . | indent 4 }}
   ceilometer-api.sh: |
 {{ tuple "bin/_ceilometer-api.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
   ceilometer-central.sh: |
