Deploy redis-operator from openstack controller
Redis is optional component, built redis operator deployment
into openstack controller.

Related-Prod: PRODX-47636

Change-Id: Ife66669d4a5894aee0683139ee2a26ecdd37a994

--- a/openstack_controller/templates/size/single.yaml
+++ b/openstack_controller/templates/size/single.yaml
@@ -9,11 +9,14 @@ common:
 
 services:
   redis:
-    redisfailover:
-      redis:
-        replicas: 1
-      sentinel:
-        replicas: 1
+    redisoperator:
+      values:
+        redisfailover:
+          spec:
+            redis:
+              replicas: 1
+            sentinel:
+              replicas: 1
   database:
     mariadb:
       values:
