--- a/tests/fixtures/render_service_template/output/redis/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/redis/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -1,11 +1,11 @@
 spec:
-  auth:
-    secretPath: generated-redis-password
-  labelWhitelist:
-  - ^app.*
-  redis:
-    affinity:
-      nodeAffinity:
+  releases:
+  - name: openstack-redis-operator
+    chart: osh-infra/redisoperator
+    values:
+      image:
+        fullName: redis-operator:latest
+      node_affinity:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
           - matchExpressions:
@@ -13,111 +13,121 @@ spec:
               operator: In
               values:
               - enabled
-      podAntiAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchExpressions:
-            - key: app.kubernetes.io/component
-              operator: In
-              values:
-              - redis
-          topologyKey: kubernetes.io/hostname
-    containerSecurityContext:
-      allowPrivilegeEscalation: False
-      capabilities:
-        drop:
-        - ALL
-      privileged: False
-      readOnlyRootFilesystem: True
-      runAsGroup: 65534
-      runAsNonRoot: True
-      runAsUser: 65534
-    customConfig:
-    - save 600 1
-    - save 300 10
-    - save 60 1000
-    - save 10 10000
-    - client-output-buffer-limit slave 512mb 512mb 0
-    image: redis-failover:latest
-    replicas: 3
-    securityContext:
-      fsGroup: 65534
-      runAsGroup: 65534
-      runAsNonRoot: True
-      runAsUser: 65534
-    storage:
-      keepAfterDeletion: true
-      persistentVolumeClaim:
-        metadata:
-          name: lvp-fake-root
+      rbac:
+        apiVersion: v1
+        install: true
+      redisfailover:
         spec:
-          accessModes:
-          - ReadWriteOnce
-          resources:
-            requests:
-              storage: 1Gi
-          storageClassName: lvp-fake-root
-  sentinel:
-    rollingUpdate:
-      maxSurge: 0
-      maxUnavailable: 1
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-          - matchExpressions:
-            - key: openstack-control-plane
-              operator: In
-              values:
-              - enabled
-      podAntiAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchExpressions:
-            - key: app.kubernetes.io/component
-              operator: In
-              values:
-              - sentinel
-          topologyKey: kubernetes.io/hostname
-    containerSecurityContext:
-      allowPrivilegeEscalation: False
-      capabilities:
-        drop:
-        - ALL
-      privileged: False
-      readOnlyRootFilesystem: True
-      runAsGroup: 65534
-      runAsNonRoot: True
-      runAsUser: 65534
-    containerSecurityContext:
-      allowPrivilegeEscalation: False
-      capabilities:
-        drop:
-        - ALL
-      privileged: False
-      readOnlyRootFilesystem: True
-      runAsGroup: 65534
-      runAsNonRoot: True
-      runAsUser: 65534
-    configCopy:
-      containerSecurityContext:
-        allowPrivilegeEscalation: False
-        capabilities:
-          drop:
-          - ALL
-        privileged: False
-        readOnlyRootFilesystem: True
-        runAsGroup: 65534
-        runAsNonRoot: True
-        runAsUser: 65534
-    customConfig:
-    - down-after-milliseconds 2000
-    - failover-timeout 10000
-    - parallel-syncs 1
-    image: redis-failover:latest
-    replicas: 3
-    securityContext:
-      fsGroup: 65534
-      runAsGroup: 65534
-      runAsNonRoot: True
-      runAsUser: 65534
+          redis:
+            affinity:
+              nodeAffinity:
+                requiredDuringSchedulingIgnoredDuringExecution:
+                  nodeSelectorTerms:
+                    - matchExpressions:
+                        - key: openstack-control-plane
+                          operator: In
+                          values:
+                            - enabled
+              podAntiAffinity:
+                requiredDuringSchedulingIgnoredDuringExecution:
+                - labelSelector:
+                    matchExpressions:
+                      - key: app.kubernetes.io/component
+                        operator: In
+                        values:
+                        - redis
+                  topologyKey: "kubernetes.io/hostname"
+            containerSecurityContext:
+              allowPrivilegeEscalation: false
+              capabilities:
+                drop:
+                - ALL
+              privileged: false
+              readOnlyRootFilesystem: true
+              runAsGroup: 65534
+              runAsNonRoot: true
+              runAsUser: 65534
+            customConfig:
+              - "save 600 1"
+              - "save 300 10"
+              - "save 60 1000"
+              - "save 10 10000"
+        #increase hard and soft memory limits for slave replication
+              - "client-output-buffer-limit slave 512mb 512mb 0"
+            image: redis-failover:latest
+            replicas: 3
+            securityContext:
+              fsGroup: 65534
+              runAsGroup: 65534
+              runAsNonRoot: true
+              runAsUser: 65534
+            storage:
+              keepAfterDeletion: true
+              persistentVolumeClaim:
+                metadata:
+                  name: lvp-fake-root
+                spec:
+                  accessModes:
+                  - ReadWriteOnce
+                  resources:
+                    requests:
+                      storage: 1Gi
+                  storageClassName: lvp-fake-root
+          sentinel:
+            rollingUpdate:
+              maxSurge: 0
+              maxUnavailable: 1
+            affinity:
+              nodeAffinity:
+                requiredDuringSchedulingIgnoredDuringExecution:
+                  nodeSelectorTerms:
+                    - matchExpressions:
+                        - key: openstack-control-plane
+                          operator: In
+                          values:
+                            - enabled
+              podAntiAffinity:
+                requiredDuringSchedulingIgnoredDuringExecution:
+                - labelSelector:
+                    matchExpressions:
+                      - key: app.kubernetes.io/component
+                        operator: In
+                        values:
+                        - sentinel
+                  topologyKey: "kubernetes.io/hostname"
+            configCopy:
+              containerSecurityContext:
+                allowPrivilegeEscalation: false
+                capabilities:
+                  drop:
+                  - ALL
+                privileged: false
+                readOnlyRootFilesystem: true
+                runAsGroup: 65534
+                runAsNonRoot: true
+                runAsUser: 65534
+            containerSecurityContext:
+              allowPrivilegeEscalation: false
+              capabilities:
+                drop:
+                - ALL
+              privileged: false
+              readOnlyRootFilesystem: true
+              runAsGroup: 65534
+              runAsNonRoot: true
+              runAsUser: 65534
+            securityContext:
+              fsGroup: 65534
+              runAsGroup: 65534
+              runAsNonRoot: true
+              runAsUser: 65534
+            customConfig:
+              - "down-after-milliseconds 2000"
+              - "failover-timeout 10000"
+              - "parallel-syncs 1"
+            image: redis-failover:latest
+            replicas: 3
+          auth:
+            secretPath: generated-redis-password
+          labelWhitelist:
+          - ^app.*
