[cinder] Mount Ceph config to all Cinder containers if it enabled in OS controller
Related-Prod: PRODX-47134
Change-Id: Ib54d433125f17c9f2de071f7c2e3da106c9547da

--- a/charts/openstack/cinder/templates/daemonset-volume.yaml
+++ b/charts/openstack/cinder/templates/daemonset-volume.yaml
@@ -142,7 +142,7 @@ spec:
               mountPath: /etc/cinder/conf/backends.conf
               subPath: backend_ds.conf
               readOnly: true
-            {{- if ( eq "true" ( list .Values.conf.backends | include "cinder.utils.has_ceph_backend")) }}
+            {{- if or .Values.manifests.ceph_conf ( eq "true" ( list .Values.conf.backends | include "cinder.utils.has_ceph_backend")) }}
             - name: ceph-etc
               mountPath: /etc/ceph/ceph.conf
               subPath: ceph.conf
@@ -236,7 +236,7 @@ spec:
           configMap:
             name: cinder-internal-tenant-ids
             defaultMode: 416
-        {{- if ( eq "true" ( list .Values.conf.backends | include "cinder.utils.has_ceph_backend")) }}
+        {{- if or .Values.manifests.ceph_conf ( eq "true" ( list .Values.conf.backends | include "cinder.utils.has_ceph_backend")) }}
         - name: ceph-etc
         {{- if .Values.manifests.ceph_conf }}
           secret:
